--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,37 +15,40 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('views.home') }}">Home</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+            </li>
+            {% else %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('auth.signup') }}">Signup</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-            </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
 {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
+{% if messages %}
 {% for category, message in messages %}
-        {% if category == 'error' %}
-            {% set cssCategory = 'danger' %}
-        {% else %}
-            {% set cssCategory = 'success' %}
-        {% endif %}
-        <div class="alert alert-{{ cssCategory }} alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+{% if category == 'error' %}
+{% set cssCategory = 'danger' %}
+{% else %}
+{% set cssCategory = 'success' %}
+{% endif %}
+<div class="alert alert-{{ cssCategory }} alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 {% endfor %}
-    {% endif %}
+{% endif %}
 {% endwith %}
 <div class="container">
     {% block content %}{% endblock %}
